lib/tests/fixtures/compiler/evaluation/collector_in_type_spec.baseline
Error: collector_in_type_spec.pp:1:29: node 'test': syntax error: expected ']' but found '<|'.
  type Invalid = Integer[File <||>]
                              ^~
